--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.15.8",
     "d3-force": "^3.0.0",
     "react": "^18.2.0",
