--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3-force": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
     "uuid": "^11.1.0"
